2005-08-15  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c (target_init): Modified the target
	init for lpd7a404 so that the SMC91x controller works properly on
	the latest lpd7a404 CardEngines; PCN-285 2005.5.4.

2005-08-11  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/lpd7a40x.h (CPLD_CONTROL_WLPEN): Changed
	constant name to match that used by the driver and the LPD79520.

	* src/mach-lh7a40x/timer.c (timer_delta): The interval timer was
	wrong, too.

	* src/mach-lh7a40x/initialize.c: The usleep timer setup was wrong.
	Don't know how this ever worked.  ;-) Had to move it to timer2 so
	that it didn't conflict with the interval timer.

2005-08-10  Marc Singer  <elf@buici.com>

	* src/drivers/drv-mem.c (memory_report): Groomed the memory report
	to eliminate first blank line.

	* src/apex/command.c (exec_monitor): Removed leading whitespace in
	startup command reports.

2005-08-08  Marc Singer  <elf@buici.com>

	* src/apex/cmd-copy.c (cmd_copy): Detecting copy errors and
	returning appropriate error code.

	* src/apex/command.c (exec_monitor): Fixed parser for startup
	command so that semicolon no longer needed at the end of the
	command.  Fixed a bug in the routine that writes to address zero
	on startup.

	* src/apex/console.c (console_poll): Improved methods for
	detecting user break condition.  Injected a meta-driver between
	the serial driver and the functions that communicate with the
	user.

2005-08-03  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/ads7843.c: ads7843 test command.

2005-08-01  Marc Singer  <elf@buici.com>

	* src/net/ipconfig.c (cmd_ipconfig): IP configuration via RARP or
	manual configuration.

	* src/mach-lh7952x/drv-emac.c (cmd_emac): Some grooming of the
	diagnostic outputs.

	* src/net/tftp.c (ping_terminate): Fixed abort of tftp by
	keystroke.

	* src/mach-lh7952x/drv-emac.c (eth_read): Check for buffer looping
	on read.  This is untested.

2005-07-29  Marc Singer  <elf@buici.com>
