@@ -377,7 +377,7 @@ typedef unsigned short buffer_t;
 #else
 typedef unsigned char buffer_t;
 #endif
-static buffer_t __attribute__((section(".pcm.bss"))) buffer[128*1024];
+static buffer_t __attribute__((section(".pcm.xbss"))) buffer[128*1024];
 
 /* convert_source
    
